--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -1,3 +1,16 @@
+html {
+    height: 100%;
+}
+body {
+    min-height: 100%;
+    overflow: hidden;
+    margin: 0;
+    background-color: #333;
+    font-size: 14px;
+    color: #eee;
+    font-family: Helvetica;
+}
+
 #ui-root {
     position: absolute;
     top: 0;
@@ -32,16 +45,182 @@
     }
 }
 
-.hierarchy {
-    > .content {
-        > .ui-panel {
-            cursor: pointer;
-            &:hover {
-                background-color: rgba(#07f, 0.1);
+// .hierarchy {
+//     > .content {
+//         > .loadingOverlay {
+//             position: absolute;
+//             top: 0;
+//             right: 0;
+//             bottom: 0;
+//             left: 0;
+//             width: auto;
+//             height: auto;
+//             background-color: #222;
+
+//             opacity: 1;
+//             visibility: visible;
+//             transition: visibility 100ms, opacity 100ms;
+
+//             &.hidden {
+//                 display: block;
+//                 visibility: hidden;
+//                 opacity: 0;
+//             }
+
+//             > .content {
+//                 > .ui-progress {
+//                     width: 128px;
+//                     height: 4px;
+//                     position: absolute;
+//                     top: 50%;
+//                     left: 50%;
+//                     margin: -2px 0 0 -64px;
+//                 }
+//             }
+//         }
+//     }
+// }
+
+.ui-panel {
+    > .content > .ui-panel.overlay {
+        z-index: 1;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        width: auto;
+        height: auto;
+        background-color: #222;
+
+        opacity: 1;
+        visibility: visible;
+        transition: visibility 100ms, opacity 100ms;
+
+        &.hidden {
+            display: block;
+            visibility: hidden;
+            opacity: 0;
+        }
+
+        > .content {
+            height: 100%;
+
+            > .ui-progress {
+                width: 128px;
+                height: 4px;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                margin: -2px 0 0 -64px;
             }
-            &.selected {
-                background-color: #07f;
+        }
+    }
+}
+
+.ui-panel.attributes > .content {
+    > .row {
+        &.field-texture > .content {
+            text-align: center;
+            padding: 8px;
+        }
+        > .content {
+            > .ui-label:first-child {
+                width: 78px;
+                text-align: right;
             }
+
+            > .field-id,
+            > .field-size,
+            > .field-dimensions {
+                background-color: #000;
+                padding: 0 8px;
+                font-size: 11px;
+                font-family: 'Lucida Grande';
+            }
+            > .field-name {
+                width: 244px;
+            }
+            > .field-position,
+            > .field-rotation,
+            > .field-scale {
+                width: 64px;
+            }
+
+            > .field-texture {
+                max-width: 100%;
+                background-image: url("../img/asset-placeholder-texture.png");
+                background-repeat: repeat;
+                min-width: 8px;
+                min-height: 8px;
+            }
+        }
+    }
+}
+
+.ui-grid.assets {
+    > .ui-grid-item {
+        position: relative;
+
+        &.type-animation {
+            background-image: url("../img/asset-placeholder-animation.png");
+            > .icon {
+                background-image: url("../img/asset-icons/animation.png");
+            }
+        }
+        &.type-audio {
+            background-image: url("../img/asset-placeholder-audio.png");
+            > .icon {
+                background-image: url("../img/asset-icons/audio.png");
+            }
+        }
+        &.type-json {
+            background-image: url("../img/asset-placeholder-json.png");
+            > .icon {
+                background-image: url("../img/asset-icons/json.png");
+            }
+        }
+        &.type-material {
+            background-image: url("../img/asset-placeholder-material.png");
+            > .icon {
+                background-image: url("../img/asset-icons/material.png");
+            }
+        }
+        &.type-model {
+            background-image: url("../img/asset-placeholder-model.png");
+            > .icon {
+                background-image: url("../img/asset-icons/model.png");
+            }
+        }
+        &.type-scene {
+            background-image: url("../img/asset-placeholder-scene.png");
+            > .icon {
+                background-image: url("../img/asset-icons/scene.png");
+            }
+        }
+        &.type-texture {
+            background-image: url("../img/asset-placeholder-texture.png");
+            > .icon {
+                background-image: url("../img/asset-icons/texture.png");
+            }
+        }
+
+        &.selected > .icon {
+            background-color: #07f;
+        }
+        > .icon {
+            display: block;
+            position: absolute;
+            width: 16px;
+            height: 16px;
+            top: 0;
+            right: 0;
+            padding: 4px;
+            background-color: #111;
+            background-image: url("../img/asset-icons/unknown.png");
+            background-size: 16px 16px;
+            background-repeat: no-repeat;
+            background-position: center center;
         }
     }
 }
